@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 07-10-2004 fixed: Spin controls showed range unnecessarily.
   - 07-10-2004 updated: Hebrew language file by okets
   - 07-10-2004 changed: Reset instead of powercycle on pressing reboot. [ 1041020 ]
   - 06-10-2004 fixed: crash when loading a second movie using TTF fonts for subs
